# ziafont

./: .pylintrc  CHANGES.md  README.md  setup.cfg  setup.py
docs/: api.rst  conf.py  glyphs.rst  index.rst  inspect.rst  requirements.txt  strings.rst  usage.rst
test/: manyfonts.ipynb  test.ipynb  testgpos.ipynb  testgsub.ipynb
ziafont/: __init__.py  cmap.py  config.py  findfont.py  font.py  fontread.py  fonttypes.py  glyph.py  glyphcff.py  glyphglyf.py  glyphinspect.py  gpos.py  gsub.py  inspect.py  svgpath.py  tables.py
