[metadata]
name = ziafont
version = attr: ziafont.__version__
author = Collin J. Delker
author_email = code@collindelker.com
url = https://ziafont.readthedocs.io
description = Convert TTF/OTF font glyphs to SVG paths
long_description = file: README.md
long_description_content_type = text/markdown
keywords = font, truetype, opentype, svg, glyph
license = MIT
project_urls =
    Documentation = https://ziafont.readthedocs.io
    Source Code = https://github.com/cdelker/ziafont
classifiers =
        Development Status :: 4 - Beta
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3.11
        Programming Language :: Python :: 3.12
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent
        Intended Audience :: Education
        Intended Audience :: Science/Research
        Intended Audience :: End Users/Desktop
        Intended Audience :: Developers

[options]
packages = find:
zip_safe = False
python_requires = >= 3.8
include_package_data = True

[options.package_data]
ziafont = 
    py.typed
ziafont.fonts =
    DejaVuSans.ttf
